#please update this file ONLY by using update_makefileam.sh
#afterwards, if you're an official otserv developer, please
#commit your updated  into the repo
pkgdata_DATA = \
	npc/lib/merchant.xml \
	npc/lib/bankman.xml \
	npc/lib/postman.xml \
	npc/oracle.xml \
	npc/scripts/lib/npc.lua \
	npc/scripts/82test.lua \
	npc/scripts/ruby.lua \
	npc/scripts/cityguard.lua \
	npc/merchant\ glut.xml \
	npc/bankman\ billy.xml \
	npc/ruby.xml \
	npc/cityguard.xml \
	npc/test82.xml \
	npc/mailman\ maily.xml \
	npc/helmut.xml \
	commands.xml \
	movements/lib/movements.lua \
	movements/scripts/swimming.lua \
	movements/scripts/drowning.lua \
	movements/movements.xml \
	 \
	items/items.otb \
	items/items.xml \
	raids/testraid.xml \
	raids/scripts/raidevent.lua \
	raids/raids.xml \
	world/map.otbm \
	world/map-house.xml \
	world/rookgaard.otx \
	world/map-spawn.xml \
	quests.xml \
	talkactions/lib/talkactions.lua \
	talkactions/talkactions.xml \
	talkactions/scripts/onlinelist.lua \
	talkactions/scripts/configval.lua \
	talkactions/scripts/banmanager.lua \
	talkactions/scripts/housecleaning.lua \
	update_makefileam.sh \
	vocations.xml \
	admin.xml \
	monster/stalker.xml \
	monster/dog.xml \
	monster/giant\ spider.xml \
	monster/magicthrower.xml \
	monster/monsters.xml \
	monster/warlock.xml \
	monster/demon.xml \
	monster/poison\ spider.xml \
	monster/minotaur\ archer.xml \
	creaturescripts/lib/creaturescripts.lua \
	creaturescripts/scripts/die1.lua \
	creaturescripts/scripts/die2.lua \
	creaturescripts/scripts/kill.lua \
	creaturescripts/scripts/login.lua \
	creaturescripts/scripts/logout.lua \
	creaturescripts/creaturescripts.xml \
	 \
	 \
	actions/lib/actions.lua \
	actions/scripts/trans_dec.lua \
	actions/scripts/key.lua \
	actions/scripts/spellscroll.lua \
	actions/scripts/fluids.lua \
	actions/scripts/door_close1.lua \
	actions/scripts/door_close2.lua \
	actions/scripts/decayto.lua \
	actions/scripts/food.lua \
	actions/scripts/music.lua \
	actions/scripts/shovel.lua \
	actions/scripts/fireworks.lua \
	actions/scripts/rope.lua \
	actions/scripts/spellbook.lua \
	actions/scripts/fishing.lua \
	actions/scripts/house_tiles.lua \
	actions/scripts/teleport.lua \
	actions/scripts/setevent.lua \
	actions/scripts/door_close1e.lua \
	actions/scripts/door_close1n.lua \
	actions/scripts/door_close2e.lua \
	actions/scripts/blueberry_bush.lua \
	actions/scripts/door_close2n.lua \
	actions/scripts/door_open1.lua \
	actions/scripts/door_open2.lua \
	actions/scripts/trans_inc.lua \
	actions/scripts/rage\ trinket.lua \
	actions/actions.xml \
	global.lua \
	spells/lib/spells.lua \
	spells/scripts/wild\ growth.lua \
	spells/scripts/magic\ wall.lua \
	spells/scripts/magic\ rope.lua \
	spells/scripts/energy\ wall.lua \
	spells/scripts/combustion.lua \
	spells/scripts/ultimate\ explosion.lua \
	spells/scripts/energy\ wave.lua \
	spells/scripts/strong\ haste.lua \
	spells/scripts/monsters/imitate.lua \
	spells/scripts/monsters/teleport.lua \
	spells/scripts/whirlwind.lua \
	spells/scripts/invisible.lua \
	spells/scripts/gfb.lua \
	spells/scripts/polymorph.lua \
	spells/scripts/paralyze.lua \
	spells/scripts/sd.lua \
	spells/scripts/uh.lua \
	spells/scripts/hmm.lua \
	spells/scripts/light.lua \
	spells/scripts/apocalypse.lua \
	spells/scripts/drunk.lua \
	spells/scripts/healfriend.lua \
	spells/scripts/destroy\ field.lua \
	spells/scripts/magic\ shield.lua \
	spells/scripts/fire\ field.lua \
	spells/scripts/challenge.lua \
	spells/scripts/mass\ healing.lua \
	spells/scripts/teleportrune.lua \
	spells/scripts/magic\ prison.lua \
	spells/spells.xml \
	outfits.xml \
	weapons/lib/weapons.lua \
	weapons/scripts/poison\ arrow.lua \
	weapons/scripts/poison\ spear.lua \
	weapons/scripts/quagmire\ rod.lua \
	weapons/scripts/tempest\ rod.lua \
	weapons/scripts/explosive\ arrow.lua \
	weapons/weapons.xml \
	#and that's it folks
EXTRA_DIST = Makefile.am Makefile.in  $(pkgdata_DATA)
